<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

        <Button
            android:id="@+id/ReadBtn"
            style="?android:buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="readNFC"
            android:text="@string/ReadNFCTag" />

        <ImageView
            android:id="@+id/NFCLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="writeNFC"
            android:src="@drawable/nfc" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/NFCLogo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="32dp"
                    android:text="@string/WriteNFCButton"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/clone"
                    style="?android:buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ReadBtn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="17dp"
                    android:onClick="clone"
                    android:text="@string/CloneNFCTag" />

    </RelativeLayout>
